@@ -22,6 +22,8 @@ sourceCompatibility = 1.11
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.testfx:testfx-junit:4.0+'
+    testCompile "org.testfx:openjfx-monocle:jdk-11+26"
     compile "org.openjfx:javafx-graphics:11.0.1:win"
 }
 
@@ -32,5 +34,18 @@ shadowJar {
     baseName = 'pa1'
 }
 
+test {
+    compileClassPath +=  
+    jvmArgs(
+            '--add-exports=javafx.graphics/com.sun.javafx.application=org.testfx',
+            '--add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle',
+            '--add-exports=main/application=javafx.fxml',
+            '--add-opens=main/application=javafx.fxml',
+            '--add-opens=javafx.graphics/com.sun.glass.ui=org.testfx'
+    )
+//    scanForTestClasses = false
+    include "**/*Test.class"
+    exclude "**/DemoTest*"
+}
 
 mainClassName = "application.Main"
